# object_detection

./: CMakeLists.txt  README.md
SIFT/: CMakeLists.txt  main.cpp  sift.cpp  sift.h
SURF/: CMakeLists.txt
SURF/coopcl_surf/: CMakeLists.txt  main.cpp
SURF/coopcl_surf/CLSource/: createDescriptors_kernel.cl  getOrientation_kernels.cl  hessianDet_kernel.cl  integralImage_kernels.cl  nearestNeighbor_kernel.cl  nonMaxSuppression_kernel.cl  normalizeDescriptors_kernel.cl
SURF/coopcl_surf/ccl_surf/: CMakeLists.txt  ccl_surf.cpp  ccl_surf.h  surf_constants.h
SURF/coopcl_surf/include/: clutils.h  cvutils.h  eventlist.h  fasthessian.h  kmeans.h  nearestNeighbor.h  responselayer.h  surf.h  surf_constants.h  utils.h
SURF/coopcl_surf/src/: clutils.cpp  cvutils.cpp  eventlist.cpp  fasthessian.cpp  nearestNeighbor.cpp  responselayer.cpp  surf.cpp  utils.cpp
clDriver/: CMakeLists.txt
clDriver/lib/: clDriver.h  clTaskFormat.h  common.h
clDriver/test/: CMakeLists.txt
clDriver/test/Atomics/: CMakeLists.txt  main.cpp
clDriver/test/Bfs/: CMakeLists.txt  main.cpp
clDriver/test/BlackScholes/: CMakeLists.txt  main.cpp
clDriver/test/NBody/: CMakeLists.txt  main.cpp
clDriver/test/PageRank/: CMakeLists.txt  main.cpp
clDriver/test/Sgemm/: CMakeLists.txt  main.cpp
clDriver/test/Sobel/: CMakeLists.txt  main.cpp
clDriver/test/native_driver/: CMakeLists.txt  main.cpp
clDriver/test/redesign_clTask/: CMakeLists.txt  main.cpp
clDriver/test/task_dag/: CMakeLists.txt  main.cpp
clDriver/test/transpose_ls/: CMakeLists.txt  main.cpp
common/: kpmatch.h  parse_args.h
data/matches/: beaver0.pgm  beaver1.pgm
