cmake_minimum_required(VERSION 3.1 FATAL_ERROR)

project(clDriver)
add_subdirectory(Atomics)
add_subdirectory(Bfs)
add_subdirectory(BlackScholes)
add_subdirectory(NBody)
add_subdirectory(PageRank)
add_subdirectory(Sobel)
add_subdirectory(native_driver)
add_subdirectory(task_dag)
add_subdirectory(transpose_ls)
add_subdirectory(redesign_clTask)



